# SubTab

./: .gitignore  SubTab.ipynb  pyproject.toml  requirements.txt
config/: income.yaml
utils/: load_data.py
